apply plugin: 'java'
apply plugin: 'spring-boot'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.2.RELEASE")
    }
}

dependencies {
    compile('org.springframework.boot:spring-boot-starter-web:1.3.1.RELEASE')
    compile('org.springframework.boot:spring-boot-starter-data-jpa:1.3.1.RELEASE')
    compile('mysql:mysql-connector-java:5.1.38')
    compile('org.springframework.boot:spring-boot-starter-security:1.3.1.RELEASE')
    compile('org.springframework.security.oauth:spring-security-oauth2:2.0.8.RELEASE')
    compile('org.springframework.social:spring-social-facebook:2.0.3.RELEASE')
    compile('org.springframework.social:spring-social-security:1.1.4.RELEASE')
    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
    compile("org.springframework:spring-jdbc")
    compile("com.google.gcm:gcm-server:1.0.0")

    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.3.1.RELEASE'
    testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '4.0.3.RELEASE'
    testCompile group: 'com.github.springtestdbunit', name: 'spring-test-dbunit', version: '1.3.0'
    testCompile group: 'org.dbunit', name: 'dbunit', version: '2.5.2'

    runtime('org.hsqldb:hsqldb:2.0.0')

}

jar {
    baseName = 'dualpair-server'
    version =  '0.1.0'
}

bootRun {
    systemProperties = System.properties
}